实现容错机制